# SPM-TaskManager

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: FINAL_SUBMISSION.md  conflict-resolution.md  conflict-target.md  github-upload-guide.md  issues.md  lab-deliverables.md  project-board.md  pull-requests.md  release-notes-v1.0.0.md  team.md  workflow-checkpoints.md
scripts/: add-workflow-checkpoint-commits.ps1  generate-evidence-screenshots.ps1
src/task_manager/: __init__.py  cli.py  core.py
tests/: test_task_manager.py
